--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
   <article id="output"></article>
+  <!-- three articles with instructor lists -->
+  <article class="cohort instructors" id="c28">
+    <ul>
+      <li>Joe Shep</li> 
+      <li>Kimmy Bird</li> 
+      <li>Brenda Long</li> 
+    </ul>
+  </article>
 </body>
 </html>
