--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
       <li>Brenda Long</li> 
     </ul>
   </article>
+  <article class="cohort instructors" id="c29">
+    <ul>
+      <li>Jisie David</li> 
+      <li>Andy Collins</li> 
+      <li>Emily Lemmon</li> 
+      <li>Leah Gwin-Hoefling</li> 
+    </ul>
+  </article>
+
 </body>
 </html>
